# GWADAMA

./: .buildinfo  LICENSE  README.md  genindex.html  gwadama.datasets.html  gwadama.detectors.html  gwadama.dictools.html  gwadama.fat.html  gwadama.html  gwadama.ioo.html  gwadama.synthetic.html  gwadama.tat.html  gwadama.units.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-optional.txt  requirements.txt  search.html  searchindex.js  setup.py
_modules/: index.html
_modules/gwadama/: datasets.html  detectors.html  dictools.html  fat.html  ioo.html  synthetic.html  tat.html
_sources/: gwadama.datasets.rst.txt  gwadama.detectors.rst.txt  gwadama.dictools.rst.txt  gwadama.fat.rst.txt  gwadama.ioo.rst.txt  gwadama.units.rst.txt  index.rst.txt  modules.rst.txt
doc/gwadama/: datasets.html  fat.html  synthetic.html
docs/: datasets.html  detectors.html  dictools.html  fat.html  index.html  ioo.html  synthetic.html  tat.html  units.html
docs/source/: conf.py  gwadama.datasets.rst  gwadama.detectors.rst  gwadama.dictools.rst  gwadama.fat.rst  gwadama.ioo.rst  gwadama.rst  gwadama.synthetic.rst  gwadama.tat.rst  gwadama.units.rst  index.rst  modules.rst
docs/source/_static/: custom.css
docs/source/_templates/: navbar-logo.html
gwadama/: __init__.py  datasets.py  detectors.py  dictools.py  estimators.py  fat.py  ioo.py  noise_symulation.py  synthetic.py  tat.py  tima.py  timat.py  units.py
